Made current line something which can be seen through

--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -61,9 +61,9 @@
     opacity: .75;
   }
 
-  .is-focused .line-number.cursor-line-no-selection,
+  .is-focused .line-number.cursor-line-no-selection ,
   .is-focused .line.cursor-line {
-    background-color: @base2;
+    background-color: @base2_transparent;
   }
 
   .line-number.cursor-line-no-selection {
