--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -7,6 +7,7 @@
 @base1:   rgb(235,219,178);
 @base2:   rgb(213,196,161);
 @base3:   rgb(189,174,147);
+@base2_transparent:   rgba(213,196,161,0.3);
 
 @yellow:  rgb(250,189,47);
 @orange:  rgb(254,128,25);
