--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -1,3 +1,20 @@
+// These colors are specific to the theme. Do not use in a package!
+
+@very-light-gray: #c5c8c6;
+@light-gray: #969896;
+@gray: #373b41;
+@dark-gray: #282a2e;
+@very-dark-gray: #1d1f21;
+
+
+@cyan: #8abeb7;
+@blue: #81a2be;
+@purple: #b294bb;
+@green: #9fbf6a;
+@red: #cc6666;
+@orange: #de935f;
+@light-orange: #f0c674;
+
 @base03:  rgb(40,40,40);
 @base02:  rgb(60,56,54);
 @base01:  rgb(80,73,69);
@@ -19,3 +36,13 @@
 @green:   rgb(150,187,59);
 
 @syntax-cursor-color: rgb(213,196,161);
+
+@background-darkest: @base03;
+@background-darker-plus: @base02;
+@background-darker: @base01;
+@background-dark: @base00;
+
+@text-lightest: @base0;
+@text-lighter-plus: @base1;
+@text-lighter: @base2;
+@text-light: @base3;
