--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -1,213 +1,318 @@
-@import "ui-variables";
-@import "colors";
+@import "syntax-variables";
 
-// Support for vim-mode package
-.vim-mode.command-mode:not(.mini) {
-  .cursor, .cursor.blink-off {
-    .block-cursor(hidden);
-  }
+atom-text-editor, :host {
+  background-color: @syntax-background-color;
+  color: @syntax-text-color;
 
-  &.editor.is-focused {
-    .cursor, .cursor.blink-off {
-      .block-cursor;
-    }
-  }
-}
-
-.block-cursor(@visibility: visible) {
-  border: 0;
-  background-color: @base0;
-  visibility: @visibility;
-  opacity: 0.5;
-}
-
-// Editor Syntax Styles
-.atom.text-editor {
-  background-color: @base03;
-  color: @base3;
-}
-
-.atom-text-editor {
-  .invisible-character {
-    color: @base01;
+  .wrap-guide {
+    background-color: @syntax-wrap-guide-color;
   }
 
   .indent-guide {
-    color: @base01;
-    opacity: .5;
+    color: @syntax-indent-guide-color;
+  }
+
+  .invisible-character {
+    color: @syntax-invisible-character-color;
   }
 
   .gutter {
-    background-color: @base02;
-  }
+    background-color: @syntax-gutter-background-color;
+    color: @syntax-gutter-text-color;
 
-  .gutter .line-number {
-    opacity: .75;
+    .line-number {
+      &.cursor-line {
+        background-color: @syntax-gutter-background-color-selected;
+        color: @syntax-gutter-text-color-selected;
+      }
+
+      &.cursor-line-no-selection {
+        color: @syntax-gutter-text-color-selected;
+      }
+    }
   }
 
   .gutter .line-number.folded,
   .gutter .line-number:after,
   .fold-marker:after {
-    color: @magenta;
+    color: @text-light;
+  }
+
+  .invisible {
+    color: @syntax-text-color;
   }
 
   .cursor {
-    border-color: @base03;
-    background-color: @orange;
-    width: 7px !important;
-    visibility: visible;
+    color: @syntax-cursor-color;
   }
 
   .selection .region {
-    background-color: @base01;
-    color: @base03;
-    opacity: .75;
-  }
-
-  .is-focused .line-number.cursor-line-no-selection ,
-  .is-focused .line.cursor-line {
-    background-color: @base2_transparent;
-  }
-
-  .line-number.cursor-line-no-selection {
-    background-color: @base01;
+    background-color: @syntax-selection-color;
   }
 }
 
-.bracket-matcher .region {
-  background-color: @base3;
-  opacity: 0.3;
+atom-text-editor .search-results .marker .region,
+:host .search-results .marker .region {
+  background-color: transparent;
+  border: 1px solid @syntax-result-marker-color;
+}
+
+atom-text-editor .search-results .marker.current-result .region,
+:host .search-results .marker.current-result .region {
+  border: 1px solid @syntax-result-marker-color-selected;
 }
 
 .comment {
-  color: @comment;
-  font-style: italic;
+  color: @text-light;
 }
+// COMMENTS are here
 
 .entity {
-  color: @base1;
+  &.name.type {
+    color: @light-orange;
+    text-decoration: underline;
+  }
+
+  &.other.inherited-class {
+    color: @orange;
+  }
 }
 
 .keyword {
-  color: @red;
-}
-
-.keyword.other.phpdoc {
-  color: @comment;
-  font-weight: bold;
-}
-
-.keyword.other {
   color: @green;
+
+  &.control {
+    color: @green;
+  }
+
+  &.operator {
+    color: @syntax-text-color;
+  }
+
+  &.other.special-method {
+    color: @blue;
+  }
+
+  &.other.unit {
+    color: @orange;
+  }
 }
 
-.function.construct {
-  color: @green;
-}
-
-.function.var {
-  color: @blue;
-}
-
-.storage.modifier {
-  color: @yellow;
-}
-
-.storage.type {
-  color: @green;
+.storage {
+  color: @purple;
 }
 
 .constant {
-  color: @magenta;
+  color: @orange;
 
-  &.numeric,
-  &.boolean {
+  &.character.escape {
     color: @cyan;
+  }
+
+  &.numeric {
+    color: @orange;
+  }
+
+  &.other.color {
+    color: @cyan;
+  }
+
+  &.other.symbol {
+    color: @green;
   }
 }
 
 .variable {
-  color: @blue;
-}
+  color: @syntax-variables;
 
-.variable.other.property {
-  color: @base2;
-}
+  &.interpolation {
+    color: darken(@red, 10%);
+  }
 
-.delimiter, .brace {
-  color: @red;
-}
-
-.delimiter.period {
-  color: @green;
-}
-
-.punctuation.variable {
-  color: @base0;
-}
-
-.punctuation.string {
-    color: @base1;
-}
-
-.punctuation.parameters,
-.punctuation.section.scope {
-    color: @orange;
-}
-
-.punctuation.section.embedded.begin.php,
-.punctuation.section.embedded.end.php {
-    color: @magenta;
-}
-
-.keyword.control {
-    color: @red;
-}
-
-.keyword.operator.class {
-    color: @yellow;
-}
-
-.keyword.operator.assignment {
-    color: @base1;
-}
-
-.function-call {
-    color: @base1;
-}
-
-.comparison {
-    color: @base2;
-}
-
-.invalid.deprecated {
-  text-decoration: underline;
-  color: @red;
+  &.parameter.function {
+    color: @syntax-color-function-params
+  }
+  &.other {
+    color: @syntax-color-other;
+    &.instance {
+      color: @blue;
+    }
+  }
 }
 
 .invalid.illegal {
-  color: @red;
+  background-color: @red;
+  color: @syntax-background-color;
 }
 
 .string {
   color: @green;
 
-  .constant.character.escape {
-    color: @blue;
-  }
 
   &.regexp {
     color: @cyan;
 
-    .source.ruby.embedded,
-    .string.regexp.arbitrary-repitition {
-      color: @red;
+    .source.ruby.embedded {
+      color: @orange;
+    }
+  }
+
+  &.other.link {
+    color: @red;
+  }
+}
+
+.punctuation {
+  &.definition {
+    &.comment {
+      color: @light-gray;
+    }
+
+    &.string,
+    &.variable,
+    &.parameters,
+    &.array {
+      color: @syntax-text-color;
+    }
+
+    &.heading,
+    &.identity {
+      color: @blue;
+    }
+
+    &.bold {
+      color: @light-orange;
+      font-weight: bold;
+    }
+
+    &.italic {
+      color: @purple;
+      font-style: italic;
+    }
+  }
+
+  &.section.embedded {
+    color: darken(@red, 10%);
+  }
+
+}
+
+.support {
+  &.class {
+    color: @light-orange;
+  }
+
+  &.function  {
+    color: @cyan;
+
+    &.any-method {
+      color: @blue;
     }
   }
 }
 
-.wrap-guide {
-    border-right: 3px dotted @base02;
-    opacity: .75;
-    background-color: transparent;
+.entity {
+  &.name.function {
+    color: @blue;
+  }
+
+  &.name.class, &.name.type.class {
+    color: @light-orange;
+  }
+
+  &.name.section {
+    color: @blue;
+  }
+
+  &.name.tag {
+    color: @red;
+    text-decoration: underline;
+  }
+
+  &.other.attribute-name {
+    color: @orange;
+
+    &.id {
+      color: @blue;
+    }
+  }
+}
+
+.meta {
+  &.class {
+    color: @light-orange;
+  }
+
+  &.link {
+    color: @orange;
+  }
+
+  &.require {
+    color: @blue;
+  }
+
+  &.selector {
+    color: @purple;
+  }
+
+  &.separator {
+    background-color: @gray;
+    color: @syntax-text-color;
+  }
+}
+
+.none {
+  color: @syntax-text-color;
+}
+
+.markup {
+  &.bold {
+    color: @orange;
+    font-weight: bold;
+  }
+
+  &.changed {
+    color: @purple;
+  }
+
+  &.deleted {
+    color: @red;
+  }
+
+  &.italic {
+    color: @purple;
+    font-style: italic;
+  }
+
+  &.heading .punctuation.definition.heading {
+    color: @blue;
+  }
+
+  &.inserted {
+    color: @green;
+  }
+
+  &.list {
+    color: @red;
+  }
+
+  &.quote {
+    color: @orange;
+  }
+
+  &.raw.inline {
+    color: @green;
+  }
+}
+
+.source.gfm .markup {
+  -webkit-font-smoothing: auto;
+  &.heading {
+    color: @green;
+  }
+}
+
+atom-text-editor[mini] .scroll-view,
+:host([mini]) .scroll-view {
+  padding-left: 1px;
 }
