--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -6,17 +6,18 @@
 
 
 // Set the actual colors for use
-@text-keyword: @green;
+@text-keyword: @medium-orange;
 
 // General colors
-@syntax-text-color: @text-lighter;
-@syntax-cursor-color: @text-lightest;
-@syntax-selection-color: @base2_transparent;
-@syntax-background-color: @background-darkest;
+@syntax-operator-color:   @green;
+@syntax-text-color:       @text-lighter;
+@syntax-cursor-color:     @text-lightest;
+@syntax-selection-color:  @base2_transparent;
+@syntax-background-color: @background-darkestest;
 
 // Guide colors
-@syntax-wrap-guide-color: @dark-gray;
-@syntax-indent-guide-color: @background-dark;
+@syntax-wrap-guide-color:          @dark-gray;
+@syntax-indent-guide-color:        @background-dark;
 @syntax-invisible-character-color: @text-light;
 
 // For find and replace markers
@@ -24,16 +25,16 @@
 @syntax-result-marker-color-selected: white;
 
 // Gutter colors
-@syntax-gutter-text-color: @text-lighter-plus;
-@syntax-gutter-text-color-selected: @syntax-gutter-text-color;
-@syntax-gutter-background-color: @background-darker-plus;
+@syntax-gutter-text-color:                @text-lighter-plus;
+@syntax-gutter-text-color-selected:       @syntax-gutter-text-color;
+@syntax-gutter-background-color:          @background-darker-plus;
 @syntax-gutter-background-color-selected: @base2_transparent;
 
 // For git diff info. i.e. in the gutter
-@syntax-color-renamed: @blue;
-@syntax-color-added: @green;
-@syntax-color-modified: @orange;
-@syntax-color-removed: @red;
+@syntax-color-renamed:         @blue;
+@syntax-color-added:           @green;
+@syntax-color-modified:        @orange;
+@syntax-color-removed:         @red;
 @syntax-color-function-params: @blue;
-@syntax-variables: white;
-@syntax-color-other: @light-orange;
+@syntax-color-other:           @light-orange;
+@syntax-variables:             white;
