--- a/styles/colors.less
+++ b/styles/colors.less
@@ -26,6 +26,8 @@
 @greenish-int:  #d8ea4d;
 @greenish2:     #7db967;
 @redish:        #e06d61;
+@bluish-light:  #a6b5c1;
+@orangish:      #dca855;
 
 @base04:  rgb(35,35,35);
 @base03:  rgb(40,40,40);
@@ -42,6 +44,7 @@
 @base6:   rgb(113,104,88);
 @base2_transparent:   rgba(213,196,161,0.3);
 
+@dark-white:   #aaaaaa;
 @yellow:  rgb(250,189,47);
 @orange:  rgb(232,133,53);
 @red:     rgb(236,92,75);
