Remove underlines for coffescript classes

--- a/styles/base.less
+++ b/styles/base.less
@@ -102,8 +102,8 @@ atom-text-editor .search-results .marker.current-result .region,
     //   text-decoration: underline;
 
       &.class {
-          color: @pink;
-          text-decoration: underline;
+        //   color: @pink; // coffescript
+        //   text-decoration: underline;
       }
   }
 }
@@ -251,8 +251,8 @@ atom-text-editor .search-results .marker.current-result .region,
   }
 
   &.name.class, &.name.type.class {
-    color: @light-orange;
-    text-decoration: underline;
+    color: @light-orange; // coffescript
+    // text-decoration: underline;
   }
 
   &.name.section {
