--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -68,5 +68,5 @@
 @numeric:                  #6dc1d4;
 @string:                   #1da1bf;
 @string-regexp:            #a9dae5;
-@string-const:             #a9dae5;
+@string-escape:            #5fcae3;
 @constant:                 #e88535;
