--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -15,7 +15,8 @@
 @syntax-cursor-color:     @text-lightest;
 @syntax-selection-color:  @base2_transparent;
 // @syntax-background-color: @background-darkestest;
-@syntax-background-color: #242d38;
+@syntax-background-color: #282d33;
+// @syntax-background-color: #242d38;
 // @syntax-background-color: #2c3643;
 
 // Guide colors
