Syntax variable orange

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -42,7 +42,7 @@
 @syntax-color-removed:         @red;
 @syntax-color-function-params: @blue;
 @syntax-color-other:           @light-orange;
-@syntax-variables:             white;
+@syntax-variables:             @medium-orange;
 
 
 
