Color for build-in constructor

--- a/styles/base.less
+++ b/styles/base.less
@@ -216,6 +216,10 @@ atom-text-editor .search-results .marker.current-result .region,
 // }
 
 .support {
+  &.tag {
+    color: @build-in-constructor;
+  }
+
   &.class {
     color: @build-in-type; // haskell
   }
