--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -50,6 +50,7 @@
 
 @build-in-type:            #50a455;
 @build-in-function:        #ebc57a;
+@build-in-constructor:     lighten(@constructor, 5%);
 
 @constructor:              #ec734b;
 @keyword:                  #dd9a36;
