--- a/styles/colors.less
+++ b/styles/colors.less
@@ -38,7 +38,7 @@
 @base0:   rgb(253,244,193);
 @base1:   rgb(235,219,178);
 @base2:   rgb(213,196,161);
-@base3:   rgb(189,174,147);
+@base3:   rgb(189,174,147); // #bdae93
 @base4:   rgb(168,155,131);
 @base5:   rgb(132,122,103);
 @base6:   rgb(113,104,88);
